--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/ioredis": "^4.28.7",
     "@types/node": "^17.0.8"
   },
   "dependencies": {
